// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:error should render default correctly 1`] = `
<div>
  <div
    class="sc-bczRLJ tiNKW"
  >
    <i
      class="fa-solid fa-bug"
    />
    <p
      class="sc-gsnTZi fqFNhJ"
    >
      Children
    </p>
  </div>
</div>
`;

exports[`components:error should render full screen correctly 1`] = `
<div>
  <div
    class="sc-bczRLJ cLfxGt"
  >
    <i
      class="fa-solid fa-bug"
    />
    <p
      class="sc-gsnTZi fqFNhJ"
    >
      Children
    </p>
  </div>
</div>
`;
